# bazel-ts-example

./: .bazelrc  .eslintrc.js  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-out  package.json  tsconfig.json
guides/: GUIDE.md
src/: App.scss  BUILD.bazel  app.scss  app.tsx  boot_server.js  foo.ts  index.html  index.scss  index.ts  index.tsx  names.ts
src/components/AppBar/: AppBar.scss  AppBar.tsx  BUILD.bazel
src/components/Footer/: BUILD.bazel  Footer.scss  Footer.tsx
src/components/greeting/: BUILD.bazel  greeting.scss  greeting.tsx
src/core/types/: BUILD.bazel  types.d.ts
src/demo/: App.scss  App.tsx  BUILD.bazel
src/demo/components/Snackbar/: BUILD.bazel  Snackbar.tsx
src/foo/: baz.ts
src/lib/Card/: BUILD.bazel  Card.scss
src/lib/Snackbar/: BUILD.bazel  Snackbar.scss
tools/: bazel.rc  bazel_stamp_vars.sh  file_stats.sh  gen_dep.sh
