package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver", "ts_library")

ts_library(
    name = "ts_example",
    srcs = [
        "app.tsx",
        "index.ts",
    ],
    deps = [
        "//src/components/greeting",
        "@npm//@types",
        "@npm//react",
        "@npm//react-dom",
    ],
)

load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")

sass_binary(
    name = "app",
    src = "app.scss",
    deps = [
        "//src/components/greeting:style_greeting",
    ],
)

ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "bazel_ts_example/node_modules/react/umd",
        "bazel_ts_example/node_modules/react-dom/umd",
    ],
    port = 3000,
    serving_path = "/bundle.min.js",
    static_files = [
        "index.html",
        "app.css",
        "//:node_modules/react/umd/react.development.js",
        "//:node_modules/react-dom/umd/react-dom.development.js",
    ],
    deps = [
        ":ts_example",
    ],
)
