package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "snackbar_demo",
    srcs = [
        "Snackbar.tsx",
    ],
    deps = [
        "//src/lib/Snackbar:snackbar",
        "@npm//@types",
        "@npm//react",
        "@npm//react-dom",
    ],
)
